Added auth check endpoint.
